[tool.poetry]
name = "mysql"
version = "0.1.0"
description = ""
authors = ["FMir55 <s1006005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
mysql-connector = "^2.2.9"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
